<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WeiboOAuthDemo</string>
    <string name="menu_settings">Settings</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="email">EMail:</string>
    <string name="pswd">Password:</string>
    <string name="qq">QQ</string>
    <string name="weibo">Weibo</string>
    <string name="pswd_again">Password again:</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>

</resources>